--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "version": "0.1.0",
     "author": "Alexey Korepanov",
     "dependencies": {
-      "bittorrent-dht": "*"
+      "bittorrent-dht": "*",
+      "magnet-uri": "*"
     },
     "devDependencies": {}
 }
